*: add a configuration entry to control if new collations are enabled (#14734)
Configuration entry `new_collations_enabled_on_first_bootstrap` is
added, which determines if the new collations can be enabled when a
TiDB cluster is initialized for the first time.

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -90,6 +90,9 @@ repair-table-list = []
 # The maximum permitted number of simultaneous client connections.
 max-server-connections = 4096
 
+# Whether new collations are enabled, as indicated by its name, this configuration entry take effect ONLY when a TiDB cluster bootstraps for the first time.
+new_collations_enabled_on_first_bootstrap = false
+
 [log]
 # Log level: debug, info, warn, error, fatal.
 level = "info"
