ddl, config: add a variable to control the max index length (#15012)
* ddl, config: add a variable to control the max index length

* config: update comments

* config: tiny update comments

* config,ddl: update tests

Co-authored-by: pingcap-github-bot <sre-bot@pingcap.com>

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -64,6 +64,9 @@ check-mb4-value-in-utf8 = true
 # treat-old-version-utf8-as-utf8mb4 use for upgrade compatibility. Set to true will treat old version table/column UTF8 charset as UTF8MB4.
 treat-old-version-utf8-as-utf8mb4 = true
 
+# max-index-length is used to deal with compatibility issues from v3.0.7 and previous version upgrades. It can only be in [3072, 3072*4].
+max-index-length = 3072
+
 # enable-table-lock is used to control table lock feature. Default is false, indicate the table lock feature is disabled.
 enable-table-lock = false
 
