--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,16 @@
-/expression @pingcap/co-expression
+/distsql @pingcap/co-exec
+/executor @pingcap/co-exec
+/exec @pingcap/co-exec
+/util/chunk @pingcap/co-exec
+/util/disk @pingcap/co-exec
+/util/execdetails @pingcap/co-exec
+/util/expensivequery @pingcap/co-exec
+/util/filesort @pingcap/co-exec
+/util/memory @pingcap/co-exec
+/util/sqlexec @pingcap/co-exec
+
 /planner @pingcap/co-planner
 /statistics @pingcap/co-planner
-/util/ranger  @pingcap/co-planner
+/util/ranger @pingcap/co-planner
+/util/plancodec @pingcap/co-planner
 /bindinfo @pingcap/co-planner
