--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,28 +1,28 @@
 component/executor:
-  - distsql
-  - executor
-  - util/chunk
-  - util/disk
-  - util/execdetails
-  - util/expensivequery
-  - util/filesort
-  - util/memory
-  - util/sqlexec
+  - distsql/*
+  - executor/*
+  - util/chunk/*
+  - util/disk/*
+  - util/execdetails/*
+  - util/expensivequery/*
+  - util/filesort/*
+  - util/memory/*
+  - util/sqlexec/*
 
 component/expression:
-  - expression
-  - types
+  - expression/*
+  - types/*
 
 component/planner:
-  - planner
-  - bindinfo
-  - util/ranger
-  - util/plancodec
+  - planner/*
+  - bindinfo/*
+  - util/ranger/*
+  - util/plancodec/*
 
 component/statistics:
-  - statistics
+  - statistics/*
 
 component/DDL:
-  - ddl
-  - infoschema
-  - meta
+  - ddl/*
+  - infoschema/*
+  - meta/*
