--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -31,17 +31,18 @@ split-table = true
 # The limit of concurrent executed sessions.
 token-limit = 1000
 
-# Set the memory quota for a query in bytes. Default: 1GB
+# The maximum memory available for a single SQL statement. Default: 1GB
 mem-quota-query = 1073741824
 
-# Set to true to enable use of temporary disk for some executors when mem-quota-query is exceeded.
+# Controls whether to enable the temporary storage for some operators when a single SQL statement exceeds the memory quota specified by mem-quota-query.
 oom-use-tmp-storage = true
 
-# The location of temporary disk storage using by some executors when mem-quota-query is exceeded.
+# Specifies the temporary storage path for some operators when a single SQL statement exceeds the memory quota specified by mem-quota-query.
 # It defaults to `<TMPDIR>/tidb/tmp-storage` if it is unset.
+# It only takes effect when `oom-use-tmp-storage` is `true`.
 # tmp-storage-path = "/tmp/tidb/tmp-storage"
 
-# What to do when mem-quota-query is exceeded and can not be spilled over to disk any more.
+# Specifies what operation TiDB performs when a single SQL statement exceeds the memory quota specified by mem-quota-query and cannot be spilled over to disk.
 # Valid options: ["log", "cancel"]
 oom-action = "log"
 
