--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -371,6 +371,8 @@ max-retry-count = 256
 [stmt-summary]
 # enable statement summary.
 enable = true
+# enable statement summary for TiDB internal query, default is false.
+enable-internal-query = false
 
 # max number of statements kept in memory.
 max-stmt-count = 200
