*: support plain insert on cluster index table (#17674)

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -9,8 +9,8 @@ advertise-address = ""
 # TiDB server port.
 port = 4000
 
-# Registered store name, [tikv, mocktikv]
-store = "mocktikv"
+# Registered store name, [tikv, unistore]
+store = "unistore"
 
 # TiDB storage path.
 path = "/tmp/tidb"
