telemetry: Add telemetry initial implementation (#18180)
Signed-off-by: Breezewish <me@breeswish.org>

Co-authored-by: crazycs <crazycs520@gmail.com>
Co-authored-by: Lynn <zimu_xia@126.com>
Co-authored-by: ti-srebot <66930949+ti-srebot@users.noreply.github.com>

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -109,6 +109,11 @@ max-server-connections = 0
 # Whether new collations are enabled, as indicated by its name, this configuration entry take effect ONLY when a TiDB cluster bootstraps for the first time.
 new_collations_enabled_on_first_bootstrap = false
 
+# When enabled, usage data (for example, instance versions) will be reported to PingCAP periodically for user experience analytics.
+# If this config is set to `false` on all TiDB servers, telemetry will be always disabled regardless of the value of the global variable `tidb_enable_telemetry`.
+# See PingCAP privacy policy for details: https://pingcap.com/en/privacy-policy/
+enable-telemetry = true
+
 [log]
 # Log level: debug, info, warn, error, fatal.
 level = "info"
