store: initial work for async commit; add secondary keys to prewrite request (#18303)
Signed-off-by: Nick Cameron <nrc@ncameron.org>

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -342,6 +342,9 @@ grpc-keepalive-timeout = 3
 # Max time for commit command, must be twice bigger than raft election timeout.
 commit-timeout = "41s"
 
+# Enable async commit for all transactions.
+enable-async-commit = false
+
 # Max batch size in gRPC.
 max-batch-size = 128
 # Overload threshold of TiKV.
