config,store/tikv: make how large a txn start ttlManager configurable (#18429)

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -369,6 +369,10 @@ store-limit = 0
 # store-liveness-timeout is used to control timeout for store liveness after sending request failed.
 store-liveness-timeout = "5s"
 
+# ttl-refreshed-txn-size decides whether a transaction should update its lock TTL.
+# If the size(in byte) of a transaction is large than `ttl-refreshed-txn-size`, it update the lock TTL during the 2PC.
+ttl-refreshed-txn-size = 33554432
+
 [tikv-client.copr-cache]
 # Whether to enable the copr cache. The copr cache saves the result from TiKV Coprocessor in the memory and
 # reuses the result when corresponding data in TiKV is unchanged, on a region basis.
