--- a/.github/workflows/assign_project.yml
+++ b/.github/workflows/assign_project.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Run issues assignment to project SIG Runtime Kanban
       uses: srggrs/assign-one-project-github-action@1.2.0
       if: |
+        contains(github.event.issue.labels.*.name, 'component/coprocessor') ||
         contains(github.event.issue.labels.*.name, 'component/executor') ||
         contains(github.event.issue.labels.*.name, 'component/expression')
       with:
