--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -301,6 +301,11 @@ mem-profile-interval = "1m"
 # because we have not completed GC and other functions.
 index-usage-sync-lease = "0s"
 
+# The Go GC trigger factor, you can get more information about it at https://golang.org/pkg/runtime.
+# If you encounter OOM when executing large query, you can decrease this value to trigger GC earlier.
+# If you find the CPU used by GC is too high or GC is too frequent and impact your business you can increase this value.
+gogc = 100
+
 [proxy-protocol]
 # PROXY protocol acceptable client networks.
 # Empty string means disable PROXY protocol, * means all networks.
