tikv: support external consistency when async commit is on (#20276)
Signed-off-by: Yilin Chen <sticnarf@gmail.com>

--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -394,6 +394,10 @@ commit-timeout = "41s"
 # Allow TiDB try to use 1PC protocol to commit transactions that involves only one region.
 enable-one-pc = false
 
+# Ensure external consistency when async commit or 1PC is enabled. When this option is enabled,
+# TiDB needs to get a timestamp from PD before committing a transaction and thus latency is increased.
+external-consistency = false
+
 # Max batch size in gRPC.
 max-batch-size = 128
 # Overload threshold of TiKV.
